# pipecat-murf-tts

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/foundational/: murf_tts_basic.py  murf_tts_quick_play.py
examples/ui/: murf_gui.py  play_once.py
src/pipecat_murf_tts/: __init__.py  tts.py
